# trait_gen

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  RELEASES.md  notes.md
.github/: latest.txt
.github/workflows/: master.yml  rust.yml  rust_version.yml
src/: args.rs  lib.rs  lib_macros.rs  subst.rs  tests.rs  utils.rs
tests/: integration.rs
tests/ui/: trait_gen.rs  trait_gen.stderr  trait_gen_if.rs  trait_gen_if.stderr
