[package]
name = "trait-gen"
description = "Trait implementation generator macro"
version = "0.3.2"
edition = "2021"
rust-version = "1.58.0"
authors = ["Redglyph"]
categories = ["rust-patterns"]
keywords = ["proc-macro", "macro", "trait", "generator"]
documentation = "https://docs.rs/trait-gen"
homepage = "https://github.com/blueglyph/trait_gen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blueglyph/trait_gen"
readme = "README.md"

[lib]
proc-macro = true

[features]
in_format = []

[dependencies]
quote = "1.0.23"
proc-macro2 = { version = "1.0.51", features = ["span-locations"] }
syn = { version = "1.0.109", features = ["full", "visit-mut", "extra-traits"] }
proc-macro-error = "1.0.4"

[dev-dependencies]
