[package]
name = "trait-gen"
description = "Trait implementation generator macro"
version = "2.0.5"
edition = "2021"
rust-version = "1.61.0"
authors = ["Redglyph"]
categories = ["rust-patterns"]
keywords = ["proc-macro", "macro", "trait", "generator"]
documentation = "https://docs.rs/trait-gen"
homepage = "https://github.com/blueglyph/trait_gen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blueglyph/trait_gen"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = []
no_type_gen = []

[dependencies]
quote = "1.0.40"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
syn = { version = "2.0.106", features = ["full", "visit-mut", "extra-traits"] }
proc-macro-error2 = "2.0.1"

[dev-dependencies]
trybuild = "1.0.110"
